# brainglobe-template-builder

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  cruft.json  environment.yaml  genindex.html  index.html  objects.inv  output.json  output.txt  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: test_and_deploy.yml
_static/: documentation_options.js
brainglobe_template_builder/: __init__.py  build_bird_template.py  find_midline.py  io.py  metrics.py  plots.py  preproc.py  preprocess.py  standardise.py  utils.py  validate.py
brainglobe_template_builder/napari/: __init__.py  _reader.py  _widget.py  align_widget.py  chest_of_widgets.py  mask_widget.py  midline_widget.py  napari.yaml  reorient_widget.py  save_widget.py  utils.py
brainglobe_template_builder/postproc/: annotation_filter.py
brainglobe_template_builder/preproc/: __init__.py  alignment.py  brightness.py  cropping.py  load_wingdisc.py  masking.py  mirroring_wingdisc.py  preproc_config.py  preprocess.py  raw_to_ready.py  source_to_raw.py  splitting.py  standardise.py  transform_utils.py  wingdisc_utils.py
brainglobe_template_builder/utils/: __init__.py  alignment.py  brightness.py  cropping.py  masking.py  transform_utils.py  wingdisc_utils.py
data/: .nfs000000000cb7cac700000006  SWC_BlackCap_use-for-template.csv  SWC_Rat_use-for-template.csv  SWC_brain-list_for-atlases_2024-04-15.csv  SWC_rat_horizontal.csv  oldenburg_blackcap_colors.csv
docs/source/: api_index.rst  conf.py  index.rst
examples/: BlackCap.ipynb  BlackCap_align_and_split.py  BlackCap_build_template.py  BlackCap_build_template.sh  BlackCap_methods.md  BlackCap_plot_figures.py  BlackCap_post_build.py  BlackCap_prep_highres.py  BlackCap_prep_lowres.py  BlackCap_source_images.py  cobralab_environment.yaml  slurm_array_job.sh  slurm_batch_across_average_types.sh  slurm_batch_across_templates.sh  slurm_build_template.sh  slurm_post_build.sh
examples/blackcap/: 1_source_images.py  2_prep_lowres.py  3_prep_highres.py  5_BlackCap_post_build.py  5_post_build.py  6_post_annotation.py
examples/crab/: downsample_source_images.py
examples/drosophila/: argument assignments  image_preprocessor.py  mirror_test.py  preprocessing_wing-disc.py  wing-disc.py
examples/molerat/: 1_downsample_source_images.py  2_molerat_prep_lowres.py  3_molerat_prep_highres.py  4_build_template.sh  downsample_source_images.py
examples/plots/: atlas_annotations.py  colors.csv  config.yaml  config_25um.yaml  config_50um.yaml  eurasian_blackcap_colors.csv  make_video.sh  oldenburg_blackcap_colors.csv  plots.mplstyle  sharpness.py  surface_views.py  template_and_individual.py  template_building_progress.py  template_building_stages.py  template_inputs_and_output.py  (+1 more)
scripts/: Build Template.ipynb  Filetype Conversions.ipynb  build_slurm_template.sh  build_template_with_slurm.sh
tests/: conftest.py  fetch_test_data.py
(+33 files in other folders)
