[project]
name = "brainglobe-template-builder"
authors = [{ name = "Niko Sirmpilatze", email = "niko.sirbiladze@gmail.com" }]
description = "Build unbiased anatomical templates from individual images"
readme = "README.md"
requires-python = ">=3.11.0"
dynamic = ["version"]

license = { text = "BSD-3-Clause" }

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "napari[all]>=0.6.1",
    "brainglobe-utils>=0.6.2",
    "brainglobe-atlasapi>=2.0.7",
    "napari-itk-io",
    "loguru",
    "antspyx",
    "qt-niu",
    "simpleitk"
]

entry-points."napari.manifest".brainglobe-template-builder = "brainglobe_template_builder.napari:napari.yaml"

[project.urls]
"Homepage" = "https://github.com/brainglobe/brainglobe-template-builder"
"Bug Tracker" = "https://github.com/brainglobe/brainglobe-template-builder/issues"
"Documentation" = "https://brainglobe.github.io/brainglobe-template-builder"
"Source Code" = "https://github.com/brainglobe/brainglobe-template-builder"
"User Support" = "https://github.com/brainglobe/brainglobe-template-builder/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "tox",
    "black",
    "mypy",
    "pre-commit",
    "ruff",
    "setuptools_scm",
    "pooch"
]
wingdisc = [
    'bioio',
    'bioio_czi',
    'bioio_sldy'
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brainglobe_template_builder*"]
exclude = ["tests", "docs*"]


[tool.pytest.ini_options]
addopts = "--cov=brainglobe_template_builder"

[tool.black]
target-version = ['py311', 'py312', 'py313']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
    ".yaml",
    "tox.ini",
    "tests/",
    "tests/test_unit/",
    "tests/test_integration/",
    "docs/",
    "docs/source/",
    "scripts/",
]

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs", "scripts"]
select = ["I", "E", "F"]
fix = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311,312,313}, napari-dev
isolated_build = True

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=brainglobe_template_builder --cov-report=xml -s
deps =
    napari-dev: git+https://github.com/napari/napari
"""
